[package]
name = "virtio-driver"
version = "0.4.0"
authors = ["Kevin Wolf <kwolf@redhat.com>"]
edition = "2018"
license = "(MIT OR Apache-2.0) AND BSD-3-Clause"
description = "virtio driver development library"
keywords = ["virtio", "driver", "user-space"]
categories = ["hardware-support", "virtualization"]

[features]
default = []
pci = ["pci-driver"]
vhost-user = ["memmap2", "nix/fs"]
vhost-vdpa = ["memmap2", "nix/fs", "virtio-bindings"]
_unsafe-op-in-unsafe-fn = []

[dependencies]
bitflags = "1.2"
nix = { version = "0.24", default-features = false, features = ["event"] }
memmap2 = { version = ">=0.1, <0.6", optional = true }
pci-driver = { version = "0.1.2", default-features = false, optional = true }
virtio-bindings = { version = "0.1", features = ["virtio-v5_0_0"], optional = true }
