[package]
name = "virtio-driver"
version = "0.5.0"
authors = ["Kevin Wolf <kwolf@redhat.com>"]
edition = "2021"
rust-version = "1.56"
license = "(MIT OR Apache-2.0) AND BSD-3-Clause"
description = "virtio driver development library"
keywords = ["virtio", "driver", "user-space"]
categories = ["hardware-support", "virtualization"]

[features]
default = []
pci = ["pci-driver"]
vhost-user = ["memmap2", "rustix/fs"]
vhost-vdpa = ["memmap2", "rustix/fs", "virtio-bindings"]

[dependencies]
bitflags = "1.2"
libc = "0.2"
rustix = { version = "0.37" }
memmap2 = { version = "<0.6", optional = true }
pci-driver = { version = "0.1.2", default-features = false, optional = true }
virtio-bindings = { version = "0.2", optional = true }
